# ByeByeLogger

./: .gitignore  README.md  pyproject.toml  reqiurements.txt  requirements.txt  setup.py
src/: README.md
src/byebyelogger/: __init__.py  byebyelogger.py  colorizer.py  logger.py  repository.py  style.py
src/byebyelogger/core/: abstract.py  byebyelogger.py  configuration.py  repository.py  stack_info.py
src/byebyelogger/presets/: class_method_based_preset.py  default.py
src/byebyelogger/style/: __init__.py  color.py  constants.py  format.py
tests/: d.py  test.py
